--- a/legacy_code/data_exploration/EmotionsRecognition.ipynb
+++ b/legacy_code/data_exploration/EmotionsRecognition.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "EmotionsRecognition.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -26,6 +27,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/srilav/audioml/blob/master/legacy_code/data_exploration/EmotionsRecognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -268,12 +279,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AKvuF--gd6F-",
-        "outputId": "b1c9192b-4598-44d4-f794-b4dafba22287"
+        "outputId": "b95c0374-4a87-4638-fd99-c62b0e9db135"
       },
       "source": [
         "import time\n",
         "\n",
-        "path = '/content/drive/My Drive/MyDrive/Ravdess/'\n",
+        "path = '/content/drive/My Drive/MyDrive/Ravdess/MP4_Kaggle_Testset'\n",
         "lst = []\n",
         "\n",
         "start_time = time.time()\n",
@@ -295,13 +306,13 @@
         "\n",
         "print(\"--- Data loaded. Loading time: %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 11,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- Data loaded. Loading time: 0.14173269271850586 seconds ---\n"
+            "--- Data loaded. Loading time: 74.85918235778809 seconds ---\n"
           ]
         }
       ]
@@ -309,14 +320,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kLSggnF7kKY1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        },
+        "id": "kLSggnF7kKY1",
+        "outputId": "2c999c55-af3f-4125-cd07-a3d08ef2cf51"
       },
       "source": [
         "# Creating X and y: zip makes a list of all the first elements, and a list of all the second elements.\n",
         "X, y = zip(*lst)"
       ],
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-44-997b534a2913>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Creating X and y: zip makes a list of all the first elements, and a list of all the second elements.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -656,11 +684,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Kj5NysXJ86Ei",
-        "outputId": "d0be4622-4042-42df-c22c-1c3a25011748",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kj5NysXJ86Ei",
+        "outputId": "d0be4622-4042-42df-c22c-1c3a25011748"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
@@ -681,11 +709,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K8yTObKk9rHv",
-        "outputId": "f3113550-c80b-4e4f-c3ae-40572ff82818",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K8yTObKk9rHv",
+        "outputId": "f3113550-c80b-4e4f-c3ae-40572ff82818"
       },
       "source": [
         "new_Ytest"
